objects/LLC_BI__Authorized_Account__c.object
<CustomObject>
    <description>The authorized business object is used to capture information about the account that is assigned as an authorized business for an entity.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>The system automatically populates this required lookup field to capture the account the system uses as an authorized business on behalf of the entity.</description>
        <inlineHelpText>The system-populated field associates the authorized business to the account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field to capture the authorized business for which the current authorized business is acting.</description>
        <inlineHelpText>The system-populated field associates the authorized business to another authorized business.</inlineHelpText>
        <label>Authorized Account</label>
        <referenceTo>LLC_BI__Authorized_Account__c</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity__c</fullName>
        <description>The system automatically populates this required lookup field to associate an authorized business to a specific entity involvement.</description>
        <inlineHelpText>The system-populated field associates the authorized business to a specific entity involvement.</inlineHelpText>
        <label>Entity Involvement</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field during the deposit account opening workflow to associate an authorized business to a specific ownership structure role.</description>
        <inlineHelpText>This system-populated field associates the authorized business to a specific ownership structure role.</inlineHelpText>
        <label>Ownership Structure Role</label>
        <referenceTo>LLC_BI__Ownership_Structure_Role__c</referenceTo>
        <relationshipLabel>Authorized Accounts</relationshipLabel>
        <relationshipName>Authorized_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Authorized Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorized Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorized Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>